[gd_scene load_steps=30 format=3 uid="uid://bxq28plxba3el"]

[ext_resource type="Script" path="res://entities/world/AudioManager.gd" id="1_bmmmj"]
[ext_resource type="AudioStream" uid="uid://bts8rror17rwk" path="res://assets/audio/light_bug_collected.wav" id="3_5vvyn"]
[ext_resource type="AudioStream" uid="uid://dnqsu416def4n" path="res://assets/audio/level_complete.wav" id="4_xla2n"]
[ext_resource type="AudioStream" uid="uid://dq3cwk0f6dwqc" path="res://assets/audio/level_reset.wav" id="5_7o0t7"]
[ext_resource type="AudioStream" uid="uid://27hq7ilednww" path="res://assets/audio/level_purified.wav" id="6_sjmel"]
[ext_resource type="AudioStream" uid="uid://dhkumr3j62gr0" path="res://assets/audio/frog_statue_activated.wav" id="7_72olg"]
[ext_resource type="AudioStream" uid="uid://cu52oh3bmg50a" path="res://assets/audio/light_bug_spawn.wav" id="8_e0p0f"]
[ext_resource type="AudioStream" uid="uid://cdt6ekdf1rwb2" path="res://assets/audio/hit_hazard.wav" id="9_eadus"]
[ext_resource type="AudioStream" uid="uid://jm785or560nt" path="res://assets/audio/player_respawn.wav" id="10_q486s"]
[ext_resource type="AudioStream" uid="uid://6xrhe681ij0f" path="res://assets/audio/enter_unpurifed_level.wav" id="11_lty0w"]
[ext_resource type="AudioStream" uid="uid://cldm0u1b1luu5" path="res://assets/audio/enter_new_level.wav" id="12_yuqcn"]
[ext_resource type="AudioStream" uid="uid://cin0r7ilxek0q" path="res://assets/audio/goto_level_next.wav" id="13_dv0op"]
[ext_resource type="AudioStream" uid="uid://dlupxs56o5wly" path="res://assets/audio/goto_level_prev.wav" id="14_4bcwi"]
[ext_resource type="AudioStream" uid="uid://ou4kl524gm1e" path="res://assets/audio/hop_2.wav" id="15_bfvqw"]
[ext_resource type="AudioStream" uid="uid://cuxhto680ffjn" path="res://assets/audio/hop_1.wav" id="15_nv5hr"]
[ext_resource type="AudioStream" uid="uid://cvwlp0dvo4oii" path="res://assets/audio/hop_3.wav" id="16_5xncl"]
[ext_resource type="AudioStream" uid="uid://cqi3kqbej5a6p" path="res://assets/audio/hop_land_1.wav" id="16_rub5u"]
[ext_resource type="AudioStream" uid="uid://br0tgnu7iujkn" path="res://assets/audio/croak.wav" id="17_sv6ye"]
[ext_resource type="AudioStream" uid="uid://cvpvh4j0efo2v" path="res://assets/audio/hop_land_2.wav" id="18_3ejxq"]
[ext_resource type="AudioStream" uid="uid://6w1j3oh4vp7f" path="res://assets/audio/play_button_clicked.wav" id="18_mdd3b"]
[ext_resource type="AudioStream" uid="uid://13jvn5b6feo5" path="res://assets/audio/exit_button_clicked.wav" id="19_0bmiy"]
[ext_resource type="AudioStream" uid="uid://myd45eikncpk" path="res://assets/audio/game_start.wav" id="19_qmuw1"]
[ext_resource type="AudioStream" uid="uid://b0xjgtecvg7ml" path="res://assets/audio/grass_rustle_1.wav" id="20_6foan"]
[ext_resource type="AudioStream" uid="uid://b1hwgj8il65ka" path="res://assets/audio/grass_rustle_2.wav" id="21_8l4cy"]
[ext_resource type="AudioStream" uid="uid://rs1x2eh58nnl" path="res://assets/audio/grass_rustle_3.wav" id="22_r4c7e"]
[ext_resource type="AudioStream" uid="uid://bhme1hv2jhhta" path="res://assets/audio/big_hop_prep_1.wav" id="26_indlt"]
[ext_resource type="AudioStream" uid="uid://xj3gau3jd1rv" path="res://assets/audio/big_hop_prep_2.wav" id="27_llwfi"]
[ext_resource type="AudioStream" uid="uid://r5ks4cjcfjy" path="res://assets/audio/butterfly_activate.wav" id="28_pmb4w"]
[ext_resource type="AudioStream" uid="uid://bjrxqaay5e5kj" path="res://assets/audio/butterfly_deactivate.wav" id="29_onbis"]

[node name="AudioManager" type="Node"]
process_mode = 3
script = ExtResource("1_bmmmj")

[node name="AudioLightBugCollect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_5vvyn")

[node name="AudioLevelComplete" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_xla2n")

[node name="AudioLevelReset" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_7o0t7")

[node name="AudioLevelPurified" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_sjmel")

[node name="AudioStatueActivated" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_72olg")

[node name="AudioLightBugSpawn" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_e0p0f")

[node name="AudioHitHazard" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_eadus")

[node name="AudioPlayerRespawn" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_q486s")

[node name="AudioEnterUnpurified" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_lty0w")

[node name="AudioEnterLevelNew" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_yuqcn")

[node name="AudioGoToNext" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_dv0op")

[node name="AudioGoToPrev" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("14_4bcwi")

[node name="AudioHop1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("15_nv5hr")
volume_db = -20.0

[node name="AudioHop2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("15_bfvqw")
volume_db = -20.0

[node name="AudioHop3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("16_5xncl")
volume_db = -20.0

[node name="AudioHopLanded1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("16_rub5u")
volume_db = -20.0

[node name="AudioHopLanded2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("18_3ejxq")
volume_db = -20.0

[node name="AudioCroak" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("17_sv6ye")

[node name="AudioPlayButtonClicked" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("18_mdd3b")

[node name="AudioExitButtonClicked" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("19_0bmiy")

[node name="AudioGameStarted" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("19_qmuw1")

[node name="AudioGrass1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("20_6foan")
volume_db = -10.0

[node name="AudioGrass2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("21_8l4cy")

[node name="AudioGrass3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("22_r4c7e")

[node name="AudioSuperHopPrep1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("26_indlt")

[node name="AudioSuperHopPrep2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("27_llwfi")

[node name="AudioButterflyActivate" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("28_pmb4w")

[node name="AudioButterflyDeactivate" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("29_onbis")
